@@ -1,3 +1,9 @@
+2011-05-04  Christian Franke  <franke@computer.org>
+
+	* fhandler_registry.cc (fhandler_registry::exists): Fix regression
+	in EACCES handling.
+	(fhandler_registry::open): Fix "%val" case.
+
 2011-05-04  Christopher Faylor  <me.cygwin2011@cgf.cx>
 
 	* signal.cc (_pinfo::kill): Return success on kill(0) only if pid
